Send ue info to UI

--- a/views/web_ui/index.html
+++ b/views/web_ui/index.html
@@ -38,7 +38,8 @@
                   <div id="network-list-container">
                     <div class="network-sublist">
                       <h5>UEs</h5>
-                      <ul id="ue-list" class="network-list"></ul>
+                      <ul id="ue-list" class="network-list">
+                      </ul>                      
                     </div>
                     <div class="network-sublist">
                       <h5>gNBs</h5>
