--- a/views/web_ui/style.css
+++ b/views/web_ui/style.css
@@ -154,33 +154,6 @@ button:hover {
     margin-top: 5px;
 }
 
-.options {
-    max-height: 0;
-    overflow: hidden;
-    transition: 0.2s max-height;
-}
-
-.container > :checked + .options, .options.open {
-    max-height: 200px;
-}
-
-.container > :checked + .options, h4 + .options.open {
-    margin-top: 5px;
-}
-
-.options label {
-    display: block;
-    overflow: hidden;
-    height: 20px;
-    margin: 5px;
-}
-
-.options input {
-    float: left;
-    border-radius: 2px;
-    border: none;
-    margin-right: 5px;
-}
 
 input[type=number] {
     width: 60px;
@@ -255,6 +228,26 @@ input[type=number] {
     background-color: #5F5FD3;
     font-weight: bold;
 }
+
+
+.hidden {
+    display: none;
+}
+
+.ue-item {
+    font-size: 0.9em;
+    border-bottom: 1px solid #444;
+    padding: 6px 10px;
+    color: #eee;
+}
+
+.ue-summary {
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 
 .checkAll {
     margin: 5px;
