Handle disconnected UEs

--- a/views/web_ui/index.html
+++ b/views/web_ui/index.html
@@ -183,5 +183,6 @@
     </body>
     <img id="gnb-icon" src="images/base-station.png" style="display:none;" />
     <img id="ue-icon" src="images/ue.png" style="display:none;" />
+    <img id="dead-icon" src="images/dead.png" style="display:none;" />
 
 </html>
