Add detach event

--- a/views/web_ui/index.html
+++ b/views/web_ui/index.html
@@ -168,7 +168,7 @@
             <button id="play-button">Play</button>
             <button id="pause-button">Pause</button>
             <button id="advance-button">+1s</button>
-            <input id="time-slider" type="range" min="0" max="180" value="0" step="1" style="width: 300px;">
+            <input id="time-slider" type="range" min="0" max="360" value="0" step="1" style="width: 300px;">
             <span id="current-time">0s</span>
             <label for="speed-select">Speed:</label>
             <select id="speed-select">
@@ -176,6 +176,7 @@
             <option value="2">2x</option>
             <option value="4">4x</option>
             <option value="8">8x</option>
+            <option value="16">16x</option>
             </select>
 
           </div>
